libqt6c/src/libqlistwidget.hpp

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
QListWidget* QListWidgetItem_ListWidget(const QListWidgetItem* self);
void QListWidgetItem_SetSelected(QListWidgetItem* self, bool selectVal);
bool QListWidgetItem_IsSelected(const QListWidgetItem* self);
void QListWidgetItem_SetHidden(QListWidgetItem* self, bool hide);
bool QListWidgetItem_IsHidden(const QListWidgetItem* self);
int QListWidgetItem_Flags(const QListWidgetItem* self);
void QListWidgetItem_SetFlags(QListWidgetItem* self, int flags);
libqt_string QListWidgetItem_Text(const QListWidgetItem* self);
void QListWidgetItem_SetText(QListWidgetItem* self, const libqt_string text);
QIcon* QListWidgetItem_Icon(const QListWidgetItem* self);
void QListWidgetItem_SetIcon(QListWidgetItem* self, const QIcon* icon);
libqt_string QListWidgetItem_StatusTip(const QListWidgetItem* self);
void QListWidgetItem_SetStatusTip(QListWidgetItem* self, const libqt_string statusTip);
libqt_string QListWidgetItem_ToolTip(const QListWidgetItem* self);
void QListWidgetItem_SetToolTip(QListWidgetItem* self, const libqt_string toolTip);
libqt_string QListWidgetItem_WhatsThis(const QListWidgetItem* self);
void QListWidgetItem_SetWhatsThis(QListWidgetItem* self, const libqt_string whatsThis);
QFont* QListWidgetItem_Font(const QListWidgetItem* self);
void QListWidgetItem_SetFont(QListWidgetItem* self, const QFont* font);
int QListWidgetItem_TextAlignment(const QListWidgetItem* self);
void QListWidgetItem_SetTextAlignment(QListWidgetItem* self, int alignment);
void QListWidgetItem_SetTextAlignment2(QListWidgetItem* self, int alignment);
void QListWidgetItem_SetTextAlignment3(QListWidgetItem* self, int alignment);
QBrush* QListWidgetItem_Background(const QListWidgetItem* self);
void QListWidgetItem_SetBackground(QListWidgetItem* self, const QBrush* brush);
QBrush* QListWidgetItem_Foreground(const QListWidgetItem* self);
void QListWidgetItem_SetForeground(QListWidgetItem* self, const QBrush* brush);
int QListWidgetItem_CheckState(const QListWidgetItem* self);
void QListWidgetItem_SetCheckState(QListWidgetItem* self, int state);
QSize* QListWidgetItem_SizeHint(const QListWidgetItem* self);
void QListWidgetItem_SetSizeHint(QListWidgetItem* self, const QSize* size);
QVariant* QListWidgetItem_Data(const QListWidgetItem* self, int role);
void QListWidgetItem_SetData(QListWidgetItem* self, int role, const QVariant* value);
bool QListWidgetItem_OperatorLesser(const QListWidgetItem* self, const QListWidgetItem* other);
void QListWidgetItem_Read(QListWidgetItem* self, QDataStream* in);
void QListWidgetItem_Write(const QListWidgetItem* self, QDataStream* out);
void QListWidgetItem_OperatorAssign(QListWidgetItem* self, const QListWidgetItem* other);
int QListWidgetItem_Type(const QListWidgetItem* self);
QListWidgetItem* QListWidgetItem_SuperClone(const QListWidgetItem* self);
void QListWidgetItem_OnData(const QListWidgetItem* self, intptr_t slot);
QVariant* QListWidgetItem_SuperData(const QListWidgetItem* self, int role);
void QListWidgetItem_OnSetData(QListWidgetItem* self, intptr_t slot);
void QListWidgetItem_SuperSetData(QListWidgetItem* self, int role, const QVariant* value);
void QListWidgetItem_OnOperatorLesser(const QListWidgetItem* self, intptr_t slot);
bool QListWidgetItem_SuperOperatorLesser(const QListWidgetItem* self, const QListWidgetItem* other);
void QListWidgetItem_OnRead(QListWidgetItem* self, intptr_t slot);
void QListWidgetItem_SuperRead(QListWidgetItem* self, QDataStream* in);
void QListWidgetItem_OnWrite(const QListWidgetItem* self, intptr_t slot);
void QListWidgetItem_SuperWrite(const QListWidgetItem* self, QDataStream* out);