QtBeef/src/Qt/qlistwidget.bf

	
	[LinkName("QListWidgetItem_SuperClone")]
	public static extern void** QListWidgetItem_SuperClone(void* self);
	[LinkName("QListWidgetItem_ListWidget")]
	public static extern void** QListWidgetItem_ListWidget(void* self);
	[LinkName("QListWidgetItem_SetSelected")]
	public static extern void QListWidgetItem_SetSelected(void* self, bool selectVal);
	[LinkName("QListWidgetItem_IsSelected")]
	public static extern bool QListWidgetItem_IsSelected(void* self);
	[LinkName("QListWidgetItem_SetHidden")]
	public static extern void QListWidgetItem_SetHidden(void* self, bool hide);
	[LinkName("QListWidgetItem_IsHidden")]
	public static extern bool QListWidgetItem_IsHidden(void* self);
	[LinkName("QListWidgetItem_Flags")]
	public static extern void* QListWidgetItem_Flags(void* self);
	[LinkName("QListWidgetItem_SetFlags")]
	public static extern void QListWidgetItem_SetFlags(void* self, void* flags);
	[LinkName("QListWidgetItem_Text")]
	public static extern libqt_string QListWidgetItem_Text(void* self);
	[LinkName("QListWidgetItem_SetText")]
	public static extern void QListWidgetItem_SetText(void* self, libqt_string text);
	[LinkName("QListWidgetItem_Icon")]
	public static extern void* QListWidgetItem_Icon(void* self);
	[LinkName("QListWidgetItem_SetIcon")]
	public static extern void QListWidgetItem_SetIcon(void* self, void** icon);
	[LinkName("QListWidgetItem_StatusTip")]
	public static extern libqt_string QListWidgetItem_StatusTip(void* self);
	[LinkName("QListWidgetItem_SetStatusTip")]
	public static extern void QListWidgetItem_SetStatusTip(void* self, libqt_string statusTip);
	[LinkName("QListWidgetItem_ToolTip")]
	public static extern libqt_string QListWidgetItem_ToolTip(void* self);
	[LinkName("QListWidgetItem_SetToolTip")]
	public static extern void QListWidgetItem_SetToolTip(void* self, libqt_string toolTip);
	[LinkName("QListWidgetItem_WhatsThis")]
	public static extern libqt_string QListWidgetItem_WhatsThis(void* self);
	[LinkName("QListWidgetItem_SetWhatsThis")]
	public static extern void QListWidgetItem_SetWhatsThis(void* self, libqt_string whatsThis);
	[LinkName("QListWidgetItem_Font")]
	public static extern void* QListWidgetItem_Font(void* self);
	[LinkName("QListWidgetItem_SetFont")]
	public static extern void QListWidgetItem_SetFont(void* self, void** font);
	[LinkName("QListWidgetItem_TextAlignment")]
	public static extern c_int QListWidgetItem_TextAlignment(void* self);
	[LinkName("QListWidgetItem_SetTextAlignment")]
	public static extern void QListWidgetItem_SetTextAlignment(void* self, c_int alignment);
	[LinkName("QListWidgetItem_SetTextAlignment2")]
	public static extern void QListWidgetItem_SetTextAlignment2(void* self, Qt_AlignmentFlag alignment);
	[LinkName("QListWidgetItem_SetTextAlignment3")]
	public static extern void QListWidgetItem_SetTextAlignment3(void* self, void* alignment);
	[LinkName("QListWidgetItem_Background")]
	public static extern void* QListWidgetItem_Background(void* self);
	[LinkName("QListWidgetItem_SetBackground")]
	public static extern void QListWidgetItem_SetBackground(void* self, void** brush);
	[LinkName("QListWidgetItem_Foreground")]
	public static extern void* QListWidgetItem_Foreground(void* self);
	[LinkName("QListWidgetItem_SetForeground")]
	public static extern void QListWidgetItem_SetForeground(void* self, void** brush);
	[LinkName("QListWidgetItem_CheckState")]
	public static extern Qt_CheckState QListWidgetItem_CheckState(void* self);
	[LinkName("QListWidgetItem_SetCheckState")]
	public static extern void QListWidgetItem_SetCheckState(void* self, Qt_CheckState state);
	[LinkName("QListWidgetItem_SizeHint")]
	public static extern void* QListWidgetItem_SizeHint(void* self);
	[LinkName("QListWidgetItem_SetSizeHint")]
	public static extern void QListWidgetItem_SetSizeHint(void* self, void** size);
	[LinkName("QListWidgetItem_Data")]
	public static extern void* QListWidgetItem_Data(void* self, c_int role);
	
	public function void QListWidgetItem_OnData_action(void* self, c_int role);
	[LinkName("QListWidgetItem_OnData")]
	public static extern void* QListWidgetItem_OnData(void* self, QListWidgetItem_OnData_action _action);
	
	[LinkName("QListWidgetItem_SuperData")]
	public static extern void* QListWidgetItem_SuperData(void* self, c_int role);
	[LinkName("QListWidgetItem_SetData")]
	public static extern void QListWidgetItem_SetData(void* self, c_int role, void** value);
	
	public function void QListWidgetItem_OnSetData_action(void* self, c_int role, void** value);
	[LinkName("QListWidgetItem_OnSetData")]
	public static extern void QListWidgetItem_OnSetData(void* self, QListWidgetItem_OnSetData_action _action);
	
	[LinkName("QListWidgetItem_SuperSetData")]
	public static extern void QListWidgetItem_SuperSetData(void* self, c_int role, void** value);
	[LinkName("QListWidgetItem_OperatorLesser")]
	public static extern bool QListWidgetItem_OperatorLesser(void* self, void** other);
	
	public function void QListWidgetItem_OnOperatorLesser_action(void* self, void** other);
	[LinkName("QListWidgetItem_OnOperatorLesser")]
	public static extern bool QListWidgetItem_OnOperatorLesser(void* self, QListWidgetItem_OnOperatorLesser_action _action);
	
	[LinkName("QListWidgetItem_SuperOperatorLesser")]
	public static extern bool QListWidgetItem_SuperOperatorLesser(void* self, void** other);
	[LinkName("QListWidgetItem_Read")]
	public static extern void QListWidgetItem_Read(void* self, void** _in);
	
	public function void QListWidgetItem_OnRead_action(void* self, void** _in);
	[LinkName("QListWidgetItem_OnRead")]
	public static extern void QListWidgetItem_OnRead(void* self, QListWidgetItem_OnRead_action _action);
	
	[LinkName("QListWidgetItem_SuperRead")]
	public static extern void QListWidgetItem_SuperRead(void* self, void** _in);
	[LinkName("QListWidgetItem_Write")]
	public static extern void QListWidgetItem_Write(void* self, void** _out);
	
	public function void QListWidgetItem_OnWrite_action(void* self, void** _out);
	[LinkName("QListWidgetItem_OnWrite")]
	public static extern void QListWidgetItem_OnWrite(void* self, QListWidgetItem_OnWrite_action _action);
	
	[LinkName("QListWidgetItem_SuperWrite")]
	public static extern void QListWidgetItem_SuperWrite(void* self, void** _out);
	[LinkName("QListWidgetItem_OperatorAssign")]
	public static extern void QListWidgetItem_OperatorAssign(void* self, void** other);
	[LinkName("QListWidgetItem_Type")]
	public static extern c_int QListWidgetItem_Type(void* self);
}
